--- a/website/index.html
+++ b/website/index.html
@@ -124,7 +124,7 @@ display: flex; /* Shown when active class is added */
 <nav class="container mx-auto px-4 py-3">
 <div class="flex justify-between items-center">
 <a href="index.html" class="flex items-center space-x-2 no-underline">
-<img src="https://placehold.co/100x40/007bff/ffffff?text=CLB+NP" alt="Logo CLB Nhơn Phú" class="h-10">
+<img src="images/logo.png" alt="Logo CLB Nhơn Phú" class="h-10">
 <span class="text-xl font-bold text-dark hidden md:inline">CLB Cầu Lông Nhơn Phú</span>
 </a>
 <button class="md:hidden navbar-toggler focus:outline-none">
@@ -140,15 +140,6 @@ display: flex; /* Shown when active class is added */
 <li><a href="lien-he.html">Liên Hệ</a></li>
 </ul>
 </div>
-<ul class="navbar-nav md:hidden flex-col mt-3 space-y-2 text-center bg-white pb-3">
-<li><a href="index.html">Trang Chủ</a></li>
-<li><a href="gioi-thieu.html">Giới Thiệu</a></li>
-<li><a href="tuyen-sinh.html">Lớp Học</a></li>
-<li><a href="dat-san.html">Đặt Sân</a></li>
-<li><a href="thu-vien.html">Thư Viện</a></li>
-<li><a href="tin-tuc.html">Tin Tức</a></li>
-<li><a href="lien-he.html">Liên Hệ</a></li>
-</ul>
 </nav>
 </header>
 
@@ -297,7 +288,7 @@ display: flex; /* Shown when active class is added */
 <div class="container mx-auto px-4">
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
 <div class="map-container rounded-lg overflow-hidden shadow-md">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3874.521137866889!2d109.21004067588836!3d13.80759349621968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f6c971541b6bb%3A0x55a37f44fde65c87!2zU8OibiBD4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgcsOpdA!5e0!3m2!1svi!2s!4v1712019299873!5m2!1svi!2s" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Bản đồ vị trí Sân Cầu lông Viện Sốt Rét Nhơn Phú"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1202.0870575281947!2d109.1803057!3d13.782894!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f1300733e69f9%3A0x92543a16cc942d7f!2zU8OibiBD4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgcsOpdC1LU1QtQ1QgUXV5IE5oxqFu!5e1!3m2!1sen!2s!4v1743653457972!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 <p class="text-center mt-2"><a href="https://maps.app.goo.gl/v2T5eR5fXkY7Zz9u6" target="_blank" rel="noopener noreferrer" class="text-primary hover:underline">Xem bản đồ lớn hơn</a></p>
 </div>
 <div class="contact-summary text-gray-700">
