--- a/website/header.html
+++ b/website/header.html
@@ -124,7 +124,7 @@
         <nav class="container mx-auto px-4 py-3">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="flex items-center space-x-2 no-underline">
-                    <img src="https://placehold.co/100x40/007bff/ffffff?text=CLB+NP" alt="Logo CLB Nhơn Phú" class="h-10">
+                    <img src="images/logo.png" alt="Logo CLB Nhơn Phú" class="h-10">
                     <span class="text-xl font-bold text-dark hidden md:inline">CLB Cầu Lông Nhơn Phú</span>
                 </a>
                 <button class="md:hidden navbar-toggler focus:outline-none">
@@ -152,4 +152,3 @@
         </nav>
     </header>
 
-    
