--- a/index.html
+++ b/index.html
@@ -144,10 +144,12 @@ display: flex; /* Shown when active class is added */
 </header>
 
 <main>
-<section class="hero relative h-[75vh] bg-cover bg-center flex items-center justify-center text-white text-center" style="background-image: url('https://placehold.co/1600x900/cccccc/ffffff?text=Sân+Cầu+Lông+Hiện+Đại');">
+<section class="hero relative h-[75vh] bg-cover bg-center flex items-center justify-center text-white text-center" style="background-image: url('images/hero-background.png');">
 <div class="hero-overlay absolute inset-0"></div>
 <div class="container mx-auto px-4 relative z-10">
-<h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight shadow-text">CLB Cầu Lông Nhơn Phú: Sân Chơi Đẳng Cấp - Đam Mê Kết Nối</h1>
+<h1 class="text-4xl md:text-6xl font-bold mb-4 leading-tight shadow-text">
+CLB Cầu Lông Nhơn Phú:<br>Sân Chơi Đẳng Cấp - Đam Mê Kết Nối
+</h1>
 <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto">Chào mừng bạn đến với Câu lạc bộ Cầu lông Nhơn Phú - điểm đến lý tưởng cho người yêu cầu lông tại Quy Nhơn. Với hệ thống sân hiện đại tại Viện Sốt Rét và các lớp học chất lượng, chúng tôi mang đến trải nghiệm tốt nhất cho mọi trình độ.</p>
 <div class="cta-buttons space-x-4">
 <a href="dat-san.html" class="btn btn-primary text-lg">Đặt Sân Ngay</a>
