--- a/footer.html
+++ b/footer.html
@@ -257,12 +257,11 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div class="footer-section footer-about">
-                    <div class="footer-logo">
-                        <img src="images/logo.png" alt="Logo CLB Cầu Lông Nhơn Phú">
-                        <div class="footer-logo-text">CLB Cầu Lông Nhơn Phú</div>
+                    <div class="footer-logo-text" style="text-align: center; font-size: 1.8rem; font-weight: bold; margin-bottom: 1.5rem;">
+                        CLB Cầu Lông Nhơn Phú
                     </div>
-                    <p>Câu lạc bộ Cầu lông Nhơn Phú là điểm đến lý tưởng cho người yêu cầu lông tại Quy Nhơn với hệ thống sân hiện đại tại Viện Sốt Rét và các lớp học chất lượng.</p>
-                    <div class="social-icons">
+                    <p style="text-align: center;">Câu lạc bộ Cầu lông Nhơn Phú là điểm đến lý tưởng cho người yêu cầu lông tại Quy Nhơn với hệ thống sân hiện đại tại Viện Sốt Rét và các lớp học chất lượng.</p>
+                    <div class="social-icons" style="justify-content: center;">
                         <a href="https://www.facebook.com/NHONPHUBADMINTONCLUB/" target="_blank" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" target="_blank" title="Zalo"><i class="fas fa-comment-dots"></i></a>
                         <a href="https://www.youtube.com/" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
