--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -40,6 +40,9 @@
 </head>
 <body class="bg-gray-50 text-gray-800 antialiased">
 
+    <!-- Chèn nội dung của header.html -->
+    <include src="header.html"></include>
+    
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="index.html" class="flex items-center space-x-2 no-underline">
@@ -230,52 +233,8 @@
 
     </main>
 
-    <footer class="bg-gray-800 text-gray-300 pt-12 pb-8 mt-16">
-        <div class="container mx-auto px-6">
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
-                <div>
-                    <h4 class="text-lg font-semibold text-white mb-4">CLB Cầu Lông Nhơn Phú</h4>
-                    <p class="mb-2 flex items-start">
-                        <span class="lucide text-blue-400 mr-2 mt-1 flex-shrink-0">&#xe998;</span> Sân Cầu lông Viện Sốt rét, Khu vực 8, P. Nhơn Phú, TP. Quy Nhơn, Bình Định.
-                    </p>
-                    <p class="mb-2 flex items-center">
-                        <span class="lucide text-blue-400 mr-2">&#xe9d5;</span> HLV Biền: <a href="tel:0988809890" class="ml-1 hover:text-white">0988.809.890</a>
-                    </p>
-                     <p class="mb-2 flex items-center">
-                        <span class="lucide text-blue-400 mr-2">&#xe9d5;</span> HLV Hoàng: <a href="tel:0935185558" class="ml-1 hover:text-white">0935.185.558</a>
-                    </p>
-                    <p class="mb-2 flex items-center">
-                        <span class="lucide text-blue-400 mr-2">&#xe98f;</span> <a href="mailto:clbnhonphu@gmail.com" class="hover:text-white">clbnhonphu@gmail.com</a>
-                    </p>
-                </div>
-
-                <div>
-                    <h4 class="text-lg font-semibold text-white mb-4">Liên kết nhanh</h4>
-                    <ul class="space-y-2">
-                        <li><a href="index.html" class="hover:text-white transition duration-300">Trang chủ</a></li>
-                        <li><a href="gioi-thieu.html" class="hover:text-white transition duration-300">Giới thiệu</a></li>
-                        <li><a href="lop-hoc.html" class="hover:text-white transition duration-300">Lớp học</a></li>
-                        <li><a href="dat-san.html" class="hover:text-white transition duration-300">Đặt sân</a></li>
-                        <li><a href="thu-vien.html" class="hover:text-white transition duration-300">Thư viện</a></li>
-                        <li><a href="tin-tuc.html" class="hover:text-white transition duration-300">Tin tức</a></li>
-                        <li><a href="lien-he.html" class="hover:text-white transition duration-300">Liên hệ</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 class="text-lg font-semibold text-white mb-4">Theo dõi chúng tôi</h4>
-                    <div class="flex space-x-4">
-                        <a href="https://www.facebook.com/NHONPHUBADMINTONCLUB/" target="_blank" rel="noopener noreferrer" aria-label="Facebook CLB Nhơn Phú" class="text-gray-400 hover:text-white transition duration-300">
-                            <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
-                        </a>
-                        </div>
-                </div>
-            </div>
-
-            <div class="border-t border-gray-700 pt-8 text-center text-sm">
-                Bản quyền © <span id="current-year"></span> CLB Cầu Lông Nhơn Phú. Bảo lưu mọi quyền.
-            </div>
-        </div>
+    <footer class="bg-gray-800 text-gray-300 pt-12 pb-8 mt-16" id="footer-container">
+        <!-- Nội dung footer sẽ được tải động -->
     </footer>
 
     <script>
@@ -286,6 +245,14 @@
         menuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+
+        // Tải nội dung của footer.html
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
 
         // Cập nhật năm hiện tại trong Footer
         document.getElementById('current-year').textContent = new Date().getFullYear();
