--- a/footer.html
+++ b/footer.html
@@ -391,13 +391,13 @@
                     <div class="np-footer-section np-footer-links">
                         <h3>Liên kết nhanh</h3>
                         <ul>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Trang chủ</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Giới thiệu</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Lớp học</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Đặt sân</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Thư viện</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Tin tức</a></li>
-                            <li><a href="#!"><i class="fas fa-chevron-right"></i> Liên hệ</a></li>
+                            <li><a href="index.html"><i class="fas fa-chevron-right"></i> Trang chủ</a></li>
+                            <li><a href="gioi-thieu.html"><i class="fas fa-chevron-right"></i> Giới thiệu</a></li>
+                            <li><a href="tuyen-sinh.html"><i class="fas fa-chevron-right"></i> Lớp học</a></li>
+                            <li><a href="dat-san.html"><i class="fas fa-chevron-right"></i> Đặt sân</a></li>
+                            <li><a href="thu-vien.html"><i class="fas fa-chevron-right"></i> Thư viện</a></li>
+                            <li><a href="tin-tuc.html"><i class="fas fa-chevron-right"></i> Tin tức</a></li>
+                            <li><a href="lien-he.html"><i class="fas fa-chevron-right"></i> Liên hệ</a></li>
                         </ul>
                     </div>
                     
@@ -432,7 +432,7 @@
                     <div class="np-footer-section np-footer-map">
                         <h3>Bản đồ</h3>
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3878.952923199454!2d109.2100306153456!3d13.75881099040916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f6ce4a7f3b7a1%3A0x4c3ac4b3e8a8b4e6!2zU8OibiBj4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgUsOpdA!5e0!3m2!1svi!2s!4v1678886400000!5m2!1svi!2s" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4853.751669972138!2d109.17811037598597!3d13.783179586611972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f1300733e69f9%3A0x92543a16cc942d7f!2zU8OibiBD4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgcsOpdC1LU1QtQ1QgUXV5IE5oxqFu!5e1!3m2!1svi!2s!4v1744081746117!5m2!1svi!2s" 
                             width="100%" 
                             height="200" 
                             style="border:0;" 
