--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <main>
         <section class="relative bg-gradient-to-r from-blue-600 to-cyan-500 text-white py-24 md:py-32 px-4 overflow-hidden">
              <div class="absolute inset-0 z-0 opacity-20">
-                 <img src="https://placehold.co/1920x1080/3B82F6/FFFFFF?text=Hero+Background+(images/hero-background.png)"
+                 <img src="images/hero-background.png"
                       alt="Hình ảnh nền sân cầu lông"
                       class="w-full h-full object-cover"
                       onerror="this.style.display='none'"> </div>
@@ -108,7 +108,7 @@
                      <a href="dat-san.html" class="cta-button bg-white text-blue-600 hover:bg-gray-100 font-semibold py-3 px-8 rounded-lg text-lg shadow-md inline-flex items-center justify-center">
                          <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/calendar-check.svg" alt="Đặt sân" class="icon-inline"/> Đặt Sân Ngay
                      </a>
-                     <a href="lop-hoc.html" class="cta-button bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-semibold py-3 px-8 rounded-lg text-lg shadow-md inline-flex items-center justify-center">
+                     <a href="tuyen-sinh.html" class="cta-button bg-yellow-400 hover:bg-yellow-500 text-gray-900 font-semibold py-3 px-8 rounded-lg text-lg shadow-md inline-flex items-center justify-center">
                          <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/graduation-cap.svg" alt="Lớp học" class="icon-inline"/> Tìm Hiểu Lớp Học
                      </a>
                  </div>
@@ -286,11 +286,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                     <div class="map-container rounded-lg overflow-hidden shadow-lg">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3874.441099375844!2d109.1908628748574!3d13.81200639607566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f1515a817d73f%3A0x6e0b8e6b6e2e559d!2zU8OibiBj4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgcsOpdA!5e0!3m2!1svi!2s!4v1712552045187!5m2!1svi!2s" /* Replace with your actual Google Maps embed URL */
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"
-                            title="Bản đồ vị trí CLB Cầu Lông Nhơn Phú">
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4853.751669972138!2d109.17811037598597!3d13.783179586611972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x316f1300733e69f9%3A0x92543a16cc942d7f!2zU8OibiBD4bqndSBsw7RuZyBWaeG7h24gU-G7kXQgcsOpdC1LU1QtQ1QgUXV5IE5oxqFu!5e1!3m2!1svi!2s!4v1744095799596!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
                     </div>
                     <div class="text-gray-700">
