--- a/thu-vien.html
+++ b/thu-vien.html
@@ -80,24 +80,24 @@
                 <h3 class="album-title text-xl md:text-2xl font-semibold text-center text-gray-800 mb-8">Album: Sân Bãi & Cơ Sở Vật Chất Sân Cầu Lông Viện Sốt Rét</h3>
                 <div class="gallery-grid grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 md:gap-6">
                     <a href="images/san-lon-1.jpg" data-lightbox="san-bai" data-title="Tổng quan 3 sân cầu lông" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-1.jpg" alt="Sân cầu lông Nhơn Phú tổng quan" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-1.jpg" alt="Tổng quan 3 sân cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/san-lon-2.jpg" data-lightbox="san-bai" data-title="Thảm Ecostar S7000 dày 4.5mm" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-2.jpg" alt="Thảm sân cầu lông chất lượng" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-2.jpg" alt="Thảm sân cầu lông chất lượng" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/san-lon-3.jpg" data-lightbox="san-bai" data-title="Hệ thống đèn LED chống chói" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-3.jpg" alt="Ánh sáng sân cầu lông ban đêm" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-3.jpg" alt="Ánh sáng sân cầu lông ban đêm" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/san-lon-4.jpg" data-lightbox="san-bai" data-title="Không gian trần cao thoáng đãng" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-4.jpg" alt="Không gian sân cầu lông Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-4.jpg" alt="Không gian sân cầu lông Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/san-lon-5.jpg" data-lightbox="san-bai" data-title="Khu vực ghế nghỉ cho VĐV" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-5.jpg" alt="Chỗ nghỉ ngơi sân cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-5.jpg" alt="Chỗ nghỉ ngơi sân cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/san-lon-6.jpg" data-lightbox="san-bai" data-title="Lối vào sân cầu lông Viện Sốt Rét" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/san-nho-6.jpg" alt="Lối vào CLB Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/san-lon-6.jpg" alt="Lối vào CLB Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    </div>
+                </div>
             </div>
 
             <div id="lop-hoc" class="tab-content hidden">
@@ -115,7 +115,7 @@
                     <a href="images/lop-hoc-lon-4.jpg" data-lightbox="lop-hoc" data-title="Thực hành đánh đôi tại lớp" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
                         <img src="images/lop-hoc-nho-4.jpg" alt="Tập luyện cầu lông đôi" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    </div>
+                </div>
             </div>
 
             <div id="giai-dau" class="tab-content hidden">
@@ -130,7 +130,7 @@
                     <a href="images/giai-dau-lon-3.jpg" data-lightbox="giai-dau" data-title="Tiệc cuối năm CLB Nhơn Phú" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
                         <img src="images/giai-dau-nho-3.jpg" alt="Sự kiện CLB cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    </div>
+                </div>
             </div>
 
             <div id="videos" class="tab-content hidden">
@@ -144,7 +144,7 @@
                           <iframe class="w-full" src="https://www.youtube.com/embed/VIDEO_ID_2" title="YouTube video player - Pha cầu hay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                          <p class="p-4 text-center text-gray-700 font-medium">Pha cầu hay tại giải đấu tháng 3</p>
                      </div>
-                     </div>
+                 </div>
             </div>
 
         </div>
