--- a/thu-vien.html
+++ b/thu-vien.html
@@ -103,17 +103,23 @@
             <div id="lop-hoc" class="tab-content hidden">
                 <h3 class="album-title text-xl md:text-2xl font-semibold text-center text-gray-800 mb-8">Album: Hoạt Động Lớp Học & Tập Luyện Cầu Lông</h3>
                 <div class="gallery-grid grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 md:gap-6">
-                    <a href="images/lop-hoc-lon-1.jpg" data-lightbox="lop-hoc" data-title="HLV Biền hướng dẫn kỹ thuật cơ bản" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/lop-hoc-nho-1.jpg" alt="Dạy cầu lông cơ bản Quy Nhơn" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    <a href="images/lop-hoc-lon-1.jpg" data-lightbox="lop-hoc" data-title="Tổng quan lớp học cầu lông" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-1.jpg" alt="Tổng quan lớp học cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    <a href="images/lop-hoc-lon-2.jpg" data-lightbox="lop-hoc" data-title="Lớp cầu lông trẻ em vui nhộn" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/lop-hoc-nho-2.jpg" alt="Học cầu lông trẻ em Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    <a href="images/lop-hoc-lon-2.jpg" data-lightbox="lop-hoc" data-title="Học viên thực hành kỹ thuật" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-2.jpg" alt="Học viên thực hành kỹ thuật" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    <a href="images/lop-hoc-lon-3.jpg" data-lightbox="lop-hoc" data-title="Học viên lớp nâng cao tập di chuyển" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/lop-hoc-nho-3.jpg" alt="Đào tạo cầu lông nâng cao" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    <a href="images/lop-hoc-lon-3.jpg" data-lightbox="lop-hoc" data-title="HLV hướng dẫn kỹ thuật" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-3.jpg" alt="HLV hướng dẫn kỹ thuật" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
-                    <a href="images/lop-hoc-lon-4.jpg" data-lightbox="lop-hoc" data-title="Thực hành đánh đôi tại lớp" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/lop-hoc-nho-4.jpg" alt="Tập luyện cầu lông đôi" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    <a href="images/lop-hoc-lon-4.jpg" data-lightbox="lop-hoc" data-title="Buổi tập luyện sôi nổi" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-4.jpg" alt="Buổi tập luyện sôi nổi" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    </a>
+                    <a href="images/lop-hoc-lon-5.jpg" data-lightbox="lop-hoc" data-title="Học viên luyện tập chăm chỉ" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-5.jpg" alt="Học viên luyện tập chăm chỉ" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    </a>
+                    <a href="images/lop-hoc-lon-6.jpg" data-lightbox="lop-hoc" data-title="Kết thúc buổi học vui vẻ" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/lop-hoc-lon-6.jpg" alt="Kết thúc buổi học vui vẻ" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                 </div>
             </div>
@@ -122,13 +128,22 @@
                 <h3 class="album-title text-xl md:text-2xl font-semibold text-center text-gray-800 mb-8">Album: Giải Đấu Cầu Lông & Sự Kiện CLB</h3>
                 <div class="gallery-grid grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 md:gap-6">
                     <a href="images/giai-dau-lon-1.jpg" data-lightbox="giai-dau" data-title="Không khí thi đấu giải giao hữu" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/giai-dau-nho-1.jpg" alt="Giải cầu lông Quy Nhơn" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/giai-dau-lon-1.jpg" alt="Không khí thi đấu giải giao hữu" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/giai-dau-lon-2.jpg" data-lightbox="giai-dau" data-title="Trao giải cho các VĐV xuất sắc" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/giai-dau-nho-2.jpg" alt="Trao giải cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/giai-dau-lon-2.jpg" alt="Trao giải cho các VĐV xuất sắc" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                     <a href="images/giai-dau-lon-3.jpg" data-lightbox="giai-dau" data-title="Tiệc cuối năm CLB Nhơn Phú" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
-                        <img src="images/giai-dau-nho-3.jpg" alt="Sự kiện CLB cầu lông" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                        <img src="images/giai-dau-lon-3.jpg" alt="Tiệc cuối năm CLB Nhơn Phú" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    </a>
+                    <a href="images/giai-dau-lon-4.jpg" data-lightbox="giai-dau" data-title="Hình ảnh giải đấu nội bộ" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/giai-dau-lon-4.jpg" alt="Hình ảnh giải đấu nội bộ" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    </a>
+                    <a href="images/giai-dau-lon-5.jpg" data-lightbox="giai-dau" data-title="Các VĐV chụp ảnh lưu niệm" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/giai-dau-lon-5.jpg" alt="Các VĐV chụp ảnh lưu niệm" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
+                    </a>
+                    <a href="images/giai-dau-lon-6.jpg" data-lightbox="giai-dau" data-title="Khoảnh khắc trao giải" class="block rounded-lg overflow-hidden shadow-sm hover:shadow-lg">
+                        <img src="images/giai-dau-lon-6.jpg" alt="Khoảnh khắc trao giải" class="w-full h-auto object-cover aspect-square" onerror="this.onerror=null;this.src='https://placehold.co/300x300/e2e8f0/94a3b8?text=Ảnh+Lỗi';">
                     </a>
                 </div>
             </div>
