--- a/thu-vien.html
+++ b/thu-vien.html
@@ -149,17 +149,13 @@
             </div>
 
             <div id="videos" class="tab-content hidden">
-                 <h3 class="album-title text-xl md:text-2xl font-semibold text-center text-gray-800 mb-8">Album: Video Highlights</h3>
-                 <div class="video-grid grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8 max-w-4xl mx-auto">
-                     <div class="video-item bg-white rounded-lg shadow-md overflow-hidden">
-                         <iframe class="w-full" src="https://www.youtube.com/embed/VIDEO_ID_1" title="YouTube video player - Giới thiệu CLB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                         <p class="p-4 text-center text-gray-700 font-medium">Giới thiệu CLB Cầu Lông Nhơn Phú</p>
-                     </div>
-                     <div class="video-item bg-white rounded-lg shadow-md overflow-hidden">
-                          <iframe class="w-full" src="https://www.youtube.com/embed/VIDEO_ID_2" title="YouTube video player - Pha cầu hay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                         <p class="p-4 text-center text-gray-700 font-medium">Pha cầu hay tại giải đấu tháng 3</p>
-                     </div>
-                 </div>
+                <h3 class="album-title text-xl md:text-2xl font-semibold text-center text-gray-800 mb-8">Album: Video Highlights</h3>
+                <div class="video-grid flex justify-center">
+                    <div class="video-item bg-white rounded-lg shadow-md overflow-hidden">
+                        <iframe class="w-full" src="https://www.youtube.com/embed/_EvykA-BOYc?si=7njBt11CGvDXCGHu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p class="p-4 text-center text-gray-700 font-medium">Khoảnh khắc CLB Cầu Lông Nhơn Phú</p>
+                    </div>
+                </div>
             </div>
 
         </div>
