--- a/index.html
+++ b/index.html
@@ -220,25 +220,31 @@
             <div class="container mx-auto px-4">
                 <h2 class="text-3xl md:text-4xl font-bold mb-10 text-center text-gray-900">Khoảnh Khắc Nhơn Phú</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+                                        <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
+                        <img src="images/san-lon-1.jpg" alt="Ảnh sân lớn 1" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    </div>
                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
-                        <img src="https://placehold.co/400x400/7DD3FC/FFFFFF?text=Ảnh+sân+1" alt="Ảnh sân cầu lông 1" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                        <img src="images/lop-hoc-lon-1.jpg" alt="Ảnh lớp học lớn 1" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
-                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
-                        <img src="https://placehold.co/400x400/6EE7B7/FFFFFF?text=Ảnh+lớp+học+1" alt="Ảnh lớp học 1" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden md:block">
+                        <img src="images/san-lon-2.jpg" alt="Ảnh sân lớn 2" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
-                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
-                        <img src="https://placehold.co/400x400/FBCFE8/FFFFFF?text=Ảnh+giải+đấu+1" alt="Ảnh giải đấu 1" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden lg:block">
+                        <img src="images/lop-hoc-lon-2.jpg" alt="Ảnh lớp học lớn 2" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
-                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
-                        <img src="https://placehold.co/400x400/FDE68A/FFFFFF?text=Ảnh+sân+2" alt="Ảnh sân cầu lông 2" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
+                        <img src="images/san-lon-3.jpg" alt="Ảnh sân lớn 3" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
-                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden md:block">
-                        <img src="https://placehold.co/400x400/C4B5FD/FFFFFF?text=Ảnh+lớp+học+2" alt="Ảnh lớp học 2" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity">
+                        <img src="images/lop-hoc-lon-3.jpg" alt="Ảnh lớp học lớn 3" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
-                     <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden lg:block">
-                        <img src="https://placehold.co/400x400/FECACA/FFFFFF?text=Ảnh+giao+lưu" alt="Ảnh giao lưu" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden md:block">
+                        <img src="images/san-lon-4.jpg" alt="Ảnh sân lớn 4" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
+                    <div class="aspect-square rounded-lg overflow-hidden shadow-md hover:opacity-90 transition-opacity hidden lg:block">
+                        <img src="images/lop-hoc-lon-4.jpg" alt="Ảnh lớp học lớn 4" class="w-full h-full object-cover" onerror="this.src='https://placehold.co/400x400/E0E0E0/A0A0A0?text=[Lỗi ảnh]'">
                     </div>
+                                    </div>
                  <div class="text-center mt-12">
                     <a href="thu-vien.html" class="cta-button bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-8 rounded-lg text-lg shadow-md">
                         Khám phá thư viện ảnh
