--- a/footer.html
+++ b/footer.html
@@ -383,7 +383,7 @@
                         <div class="np-social-icons">
                             <a href="https://www.facebook.com/NHONPHUBADMINTONCLUB/" target="_blank" rel="noopener noreferrer" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                             <a href="#!" target="_blank" rel="noopener noreferrer" title="Zalo"><i class="fas fa-comment-dots"></i></a>
-                             <a href="#!" target="_blank" rel="noopener noreferrer" title="YouTube"><i class="fab fa-youtube"></i></a>
+                             <a href="https://www.youtube.com/@nhonphuclub" target="_blank" rel="noopener noreferrer" title="YouTube"><i class="fab fa-youtube"></i></a>
                             <a href="https://www.tiktok.com/" target="_blank" rel="noopener noreferrer" title="TikTok"><i class="fab fa-tiktok"></i></a>
                         </div>
                     </div>
