--- a/dat-san.html
+++ b/dat-san.html
@@ -272,13 +272,56 @@
                         <strong>Thanh toán:</strong> Thanh toán trực tiếp tại sân trước hoặc sau giờ chơi (Chưa hỗ trợ chuyển khoản online).
                     </li>
                     <li>
-                        <strong>Sử dụng sân:</strong>
-                        <ul>
-                            <li>Đi giày chuyên dụng cho sân cầu lông (đế bằng, sạch).</li>
-                            <li>Giữ gìn vệ sinh chung.</li>
-                            <li>Không mang đồ ăn thức uống vào khu vực thảm sân.</li>
-                            <li>Tuân thủ các nội quy khác của CLB và Viện Sốt Rét.</li>
-                        </ul>
+                        <strong>Nội quy sử dụng sân:</strong>
+                        <div class="bg-white p-4 rounded-lg shadow-md border border-gray-300">
+                            <div class="text-center mb-4">
+                                <h1 class="text-3xl font-bold text-red-600">NỘI QUY</h1>
+                                <p class="text-lg font-semibold text-red-600">ÁP DỤNG TỪ NGÀY 1/4/2025</p>
+                            </div>
+                            <div class="mb-4 p-4 border border-blue-500 rounded-lg bg-gray-50">
+                                <h2 class="text-xl font-bold text-blue-500 mb-2">⏱️ THỜI GIAN CHƠI</h2>
+                                <p class="text-base font-semibold">MỖI LƯỢT CHƠI CHỈ ĐÁNH 1 SET 21 ĐIỂM</p>
+                            </div>
+                            <div class="mb-4 p-4 border border-blue-500 rounded-lg bg-gray-50">
+                                <h2 class="text-xl font-bold text-blue-500 mb-2">💰 BẢNG GIÁ</h2>
+                                <div class="flex justify-between">
+                                    <div class="w-1/2 pr-2">
+                                        <p class="font-bold">TIỀN SÂN:</p>
+                                        <ul class="list-disc pl-5">
+                                            <li>Người lớn (≥18 tuổi): 10.000₫/người</li>
+                                            <li>Học sinh (<18 tuổi): 7.000₫/người</li>
+                                        </ul>
+                                    </div>
+                                    <div class="w-1/2 pl-2">
+                                        <p class="font-bold">THUÊ GIỜ:</p>
+                                        <ul class="list-disc pl-5">
+                                            <li>18:00 - 20:00: 60.000₫/giờ</li>
+                                            <li>Các khung giờ khác: 50.000₫/giờ</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-4 p-4 border border-blue-500 rounded-lg bg-gray-50">
+                                <h2 class="text-xl font-bold text-blue-500 mb-2">🚫 TRANG PHỤC</h2>
+                                <p class="text-base font-semibold">KHÔNG ĐƯỢC MANG VÀO SÂN THẢM:</p>
+                                <ul class="list-disc pl-5">
+                                    <li>Dép</li>
+                                    <li>Giày đinh</li>
+                                    <li>Giày sneaker đế đen</li>
+                                    <li>Giày không phù hợp với môn cầu lông</li>
+                                </ul>
+                            </div>
+                            <div class="mb-4 p-4 border border-blue-500 rounded-lg bg-gray-50">
+                                <h2 class="text-xl font-bold text-blue-500 mb-2">🌿 GIỮ GÌN VỆ SINH</h2>
+                                <p class="text-base font-semibold">KHÔNG VỨT RÁC BỪA BÃI</p>
+                            </div>
+                            <div class="text-center p-4 border border-blue-500 rounded-lg bg-gray-50">
+                                <p class="text-lg font-bold text-red-600">🌐 Wifi password: 67896789</p>
+                            </div>
+                            <div class="text-center mt-4 italic text-sm font-semibold">
+                                Xin cảm ơn quý khách đã hợp tác tuân thủ nội quy!
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
