--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -110,10 +110,10 @@
                 <div>
                     <h3 class="text-xl font-semibold text-gray-700 mb-4 lg:text-right">Hình ảnh thực tế:</h3>
                     <div class="grid grid-cols-2 gap-4">
-                        <img src="https://placehold.co/600x400/e2e8f0/94a3b8?text=Ảnh+Sân+1" alt="Hình ảnh sân cầu lông 1" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
-                        <img src="https://placehold.co/600x400/e2e8f0/94a3b8?text=Ảnh+Sân+2" alt="Hình ảnh sân cầu lông 2" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
-                        <img src="https://placehold.co/600x400/e2e8f0/94a3b8?text=Ảnh+Sân+3" alt="Hình ảnh sân cầu lông 3" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
-                        <img src="https://placehold.co/600x400/e2e8f0/94a3b8?text=Khu+Vực+Nghỉ" alt="Khu vực nghỉ ngơi" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
+                        <img src="images/san-lon-1.jpg" alt="Hình ảnh sân cầu lông 1" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
+                        <img src="images/san-lon-3.jpg" alt="Hình ảnh sân cầu lông 2" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
+                        <img src="images/san-lon-6.jpg" alt="Hình ảnh sân cầu lông 3" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
+                        <img src="images/san-lon-4.jpg" alt="Khu vực nghỉ ngơi" class="w-full h-32 md:h-40 object-cover rounded-lg shadow-md hover:shadow-xl transition duration-300 cursor-pointer" onclick="openImageModal(this.src)">
                         </div>
                     <div class="text-center lg:text-right mt-4">
                         <a href="thu-vien.html" class="inline-flex items-center px-4 py-2 bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 transition duration-300 text-sm">
