--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Tìm hiểu về CLB Cầu Lông Nhơn Phú tại Quy Nhơn: sân bãi hiện đại ở Viện Sốt Rét, đội ngũ HLV kinh nghiệm (HLV Biền, HLV Hoàng), giờ hoạt động và cơ sở vật chất.">
     <meta name="keywords" content="cầu lông, sân cầu lông, giới thiệu câu lạc bộ cầu lông, CLB Nhơn Phú, Sân Viện Sốt Rét, cầu lông Quy Nhơn, cầu lông Bình Định, HLV Biền, HLV Hoàng, cơ sở vật chất sân cầu lông">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
