--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="keywords" content="cau long quy nhon, day cau long, san cau long, san cau long sot ret, san cau long vien sot ret, san cau sot ret, day cau long, cầu lông, sân cầu lông, dạy cầu lông, Nhơn Phú, Quy Nhơn, Bình Định, đánh cầu, chơi cầu lông, sân cầu, học cầu, học cầu lông, đào tạo cầu lông, thi đấu cầu lông, tuyển sinh cầu lông, dịch vụ cầu lông, thuê sân cầu lông, thuê sân, cầu lông viện sốt rét, sân cầu lông Việt sốt rét, Viện sốt rét Ký sinh trùng Côn trùng Quy Nhơn, Sốt rét Quy Nhơn, Cầu lông Quy Nhơn, Cầu lông Nhơn Phú, Câu lạc bộ Nhơn Phú, Câu lạc bộ cầu lông">
     <meta name="author" content="CLB Cầu Lông Nhơn Phú">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -84,6 +87,14 @@
         .animate-fade-in { animation: fadeIn 1s ease-out 0.5s forwards; opacity:0; } /* Delay added */
 
     </style>
+    <script type="application/ld+json">
+    {
+      "@context" : "https://schema.org",
+      "@type" : "WebSite",
+      "name" : "CLB Cầu Lông Nhơn Phú - Sân CL Viện Sốt Rét",
+      "url" : "https://www.nhonphu.club/"
+    }
+    </script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
