--- a/tuyen-sinh.html
+++ b/tuyen-sinh.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Tuyển sinh lớp học cầu lông hè 2025 tại CLB Cầu Lông Nhơn Phú, sân Viện Sốt Rét Quy Nhơn. Dành cho mọi lứa tuổi, từ cơ bản đến nâng cao. HLV kinh nghiệm, học phí linh hoạt.">
     <meta name="keywords" content="tuyển sinh cầu lông, học cầu lông quy nhơn, lớp cầu lông hè, cầu lông trẻ em quy nhơn, cầu lông cơ bản, cầu lông nâng cao, clb nhơn phú, sân viện sốt rét">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
