--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       onerror="this.style.display='none'"> </div>
              <div class="container mx-auto relative z-10 text-center">
                  <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-4 leading-tight animate-fade-in-down">
-                     CLB Cầu Lông Nhơn Phú: <br class="md:hidden"> Sân Chơi Đẳng Cấp - Đam Mê Kết Nối
+                     CLB Cầu Lông Nhơn Phú: <br class="md:hidden"> Sân Chơi Đẳng Cấp - <br>Đam Mê Kết Nối
                  </h1>
                  <p class="text-lg md:text-xl mb-8 max-w-3xl mx-auto animate-fade-in-up">
                      Chào mừng bạn đến với Câu lạc bộ Cầu lông Nhơn Phú - điểm đến lý tưởng cho người yêu cầu lông tại Quy Nhơn. Với hệ thống sân hiện đại tại Viện Sốt Rét và các lớp học chất lượng, chúng tôi mang đến trải nghiệm tốt nhất cho mọi trình độ.
